--- a/MagazynWPF/MainWindow.xaml
+++ b/MagazynWPF/MainWindow.xaml
@@ -8,15 +8,16 @@
         Title="MainWindow" Height="350" Width="428.276">
     <Grid Margin="0,0,-8,0">
         <Label Content="Nazwa magazynu:" HorizontalAlignment="Left" Margin="22,10,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtNazwa" HorizontalAlignment="Left" Height="23" Margin="144,14,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="159"/>
         <Button x:Name="btnPokaz" Content="Pokaż" HorizontalAlignment="Left" Margin="325,17,0,0" VerticalAlignment="Top" Width="75" Click="btnPokaz_Click" />
         <Label x:Name="lblMagazyn" Content="" HorizontalAlignment="Left" Margin="144,50,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.233,-0.355"/>
-        <DataGrid HorizontalAlignment="Left" Height="139" Margin="22,141,0,0" VerticalAlignment="Top" Width="378" >
-            <DataGrid.DataContext>
-                <local:Narzedzie/>
-            </DataGrid.DataContext>
+        <DataGrid Name="dgNarzedzia" AutoGenerateColumns="true" HorizontalAlignment="Left" Height="139" Margin="22,141,0,0" VerticalAlignment="Top" Width="291">
+            
         </DataGrid>
         <Label x:Name="lblMagazyn1" Content="Nazwa:                    Liczba:" HorizontalAlignment="Left" Margin="22,95,0,0" VerticalAlignment="Top"/>
+        <Button Content="Dodaj" HorizontalAlignment="Left" Margin="334,141,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Button Content="Usuń" HorizontalAlignment="Left" Margin="334,184,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+        <Button Content="Nowy" HorizontalAlignment="Left" Margin="325,50,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
+        <ComboBox x:Name="cmbMagazyny" HorizontalAlignment="Left" Margin="144,14,0,0" VerticalAlignment="Top" Width="120"/>
 
     </Grid>
 </Window>
